# EventPro

./: .gitignore  README.md  main.py  pyproject.toml  start-server.bat
.streamlit/: config.toml
backend/: Printer.py  ResultsGenerator.py  __init__.py  certificates.json  config.py  constants.py  data_processing.py  database_reader.py  documents_generator.py  excel_writer.py  file_operations.py  process_config.py  results_generator.py  sqlite_connections.py  submit_functions.py
components/: __init__.py  messages.py  navigation.py  page_configuration_component.py  user_control.py
pages/: about-me.py  chat-room.py  current-database-specifications.py  edit-database-tables.py  group-judge-events.py  judge-events.py  manage-users.py  new-database.py  participant-entry.py  report-generator.py  results-and-certificates-generator.py  view-previous-databases.py
