[tool.poetry]
name = "EventPro"
version = "1.0.0"
description = "Eventpro is a event management software specifically developed to speed-up the conduction of School Youth Festival and to make the conduction smooth and efficient. It greatly reduces the human effort that goes into tracking of the participants, generating reports, make judgement of events easier and generate results."
authors = ["Vishnunath A Suresh"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.36.0"
pandas = "^2.2.2"
streamlit-authenticator = "^0.3.2"
streamlit-autorefresh = "^1.0.1"
pyyaml = "^6.0.1"
xlsxwriter = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
